herramientas_ia/resultados/FUNC-06_reprocesamiento_IHQ250162_v6.4.24.txt
  File "<string>", line 34
    if idx \!= -1:
            ^
SyntaxError: unexpected character after line continuation character
